--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="divider"></div>
 
         <img src="images/YuSu.jpeg" alt="Yu Su" style="width:215;height:215px;float:left;margin-right:20px;margin-bottom:10px;margin-top:5px;">
-        <p>I'm an Associate Professor at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://twitter.com/osunlp">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. I also spent some fun time as a researcher at Microsoft Semantic Machines. I'm a 2025 Sloan Research Fellow and received several best/outstanding paper awards from CVPR and ACL.   
+        <p>I'm an Associate Professor and Innovation Scholar at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://twitter.com/osunlp">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. I also spent some fun time as a researcher at Microsoft Semantic Machines. I'm a 2025 Sloan Research Fellow and received several best/outstanding paper awards from CVPR and ACL.   
         </p>
         <p>
         I'm broadly interested in artificial intelligence, with a primary interest in the role of language as a vehicle for reasoning and communication. These days, I spend much of my time thinking about language agents [<a href="https://yusu.substack.com/p/language-agents">blog</a>, <a href="https://language-agent-tutorial.github.io/">tutorial</a>], an emerging class of AI agents characterized by their language understanding and production capabilities. 
@@ -75,7 +75,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <!-- <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li> -->
-            <li>05/2025: Happy to be promoted to Associate Professor with tenure!</li>
+            <li>05/2025: Happy to be promoted to Associate Professor with tenure and endowed with Innovation Scholar!</li>
             <li>05/2025: <a href="https://arxiv.org/abs/2502.14802">HippoRAG 2</a> accepted to ICML'25!</li>
             <li>02/2025: Honored to receive the <a href="https://sloan.org/fellowships/2025-Fellows">Sloan Research Fellowship</a>!</li>
             <li>02/2025: 3 papers accepted to CVPR'25: <a href="https://arxiv.org/abs/2411.16537">RoboSpatial</a> (<b>Oral</b>), <a href="https://arxiv.org/abs/2501.11309">Finer-CAM</a>, <a href="https://arxiv.org/abs/2501.09333">Prompt-CAM</a></li>
@@ -306,10 +306,22 @@
 	      <div style="margin-bottom: 10px;font-size: 18px">Selected recent highlights that reflect my current interests. See <a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a> for full list. *: Equal Contribution</div>	
         <ul>
           <li>
+            <span class="paperTitle">Mind2Web 2: Evaluating Agentic Search with Agent-as-a-Judge
+            </span> <br />
+            <span class="paperAuthor">Boyu Gou*, Zanming Huang*, Yuting Ning*, Yu Gu, Michael Lin, Weijian Qi, Andrei Kopanev, Botao Yu, Bernal Jiménez Gutiérrez, Yiheng Shu, Chan Hee Song, Jiaman Wu, Shijie Chen, Hanane Nour Moussa, Tianshu Zhang, Jian Xie, Yifei Li, Tianci Xue, Zeyi Liao, Kai Zhang, Boyuan Zheng, Zhaowei Cai, Viktor Rozgic, Morteza Ziyadi, Huan Sun, Yu Su. </span>
+            <span class="paperResource"> [<a href="https://arxiv.org/abs/2506.21506">paper</a>] [<a href="https://osu-nlp-group.github.io/Mind2Web-2/">project</a>] </span>
+          </li>
+          <li>
+            <span class="paperTitle">BioCLIP 2: Emergent Properties from Scaling Hierarchical Contrastive Learning
+            </span> <br />
+            <span class="paperAuthor">Jianyang Gu, Samuel Stevens, Elizabeth G Campolongo, Matthew J Thompson, Net Zhang, Jiaman Wu, Andrei Kopanev, Zheda Mai, Alexander E. White, James Balhoff, Wasila Dahdul, Daniel Rubenstein, Hilmar Lapp, Tanya Berger-Wolf, Wei-Lun Chao, Yu Su. </span>
+            <span class="paperResource"> [<a href="https://arxiv.org/abs/2505.23883">paper</a>] [<a href="https://imageomics.github.io/bioclip-2/">project</a>] </span>
+          </li>
+          <li>
             <span class="paperTitle">Is Your LLM Secretly a World Model of the Internet? Model-Based Planning for Web Agents
             </span> <br />
             <span class="paperAuthor">Yu Gu*, Kai Zhang*, Yuting Ning*, Boyuan Zheng*, Boyu Gou, Tianci Xue, Cheng Chang, Sanjari Srivastava, Yanan Xie, Peng Qi, Huan Sun, Yu Su. </span>
-            <span class="paperResource"> [<a href="https://arxiv.org/abs/2411.06559">preprint</a>] </span>
+            <span class="paperResource"> [<a href="https://arxiv.org/abs/2411.06559">paper</a>] [<a href="https://github.com/OSU-NLP-Group/WebDreamer">code</a>] </span>
           </li>
           <li>
             <span class="paperTitle">From RAG to Memory: Non-Parametric Continual Learning for Large Language Models
