--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <ul>
           <li>Reasoning and grounding, especially in multimodal contexts [<a href="https://mmmu-benchmark.github.io/">MMMU</a>, <a href="https://osu-nlp-group.github.io/SeeAct/">SeeAct</a>, <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers</a>, <a href="https://aclanthology.org/2023.acl-long.270.pdf">Pangu</a>, <a href="https://osu-nlp-group.github.io/UGround/">UGround</a>]</li>
           <li>Planning and world models [<a href="https://dki-lab.github.io/LLM-Planner/">LLM-Planner</a>, <a href="https://arxiv.org/abs/2411.06559">WebDreamer</a>]</li>
-          <li>Memory and non-parametric continual learning [<a href="https://github.com/OSU-NLP-Group/HippoRAG">HippoRAG</a>]</li>
-          <li>Benchmarking and evaluation [<a href="https://osu-nlp-group.github.io/Mind2Web/">Mind2Web</a>, <a href="https://osu-nlp-group.github.io/TravelPlanner/">TravelPlanner</a>]</li>
-          <li>AI for sciences [<a href="https://imageomics.github.io/bioclip/">BioCLIP</a>, <a href="https://osu-nlp-group.github.io/ScienceAgentBench/">ScienceAgentBench</a>]</li>
+          <li>Memory and non-parametric continual learning [<a href="https://github.com/OSU-NLP-Group/HippoRAG">HippoRAG</a>, <a href="https://arxiv.org/abs/2502.14802">HippoRAG 2</a>]</li>
+          <li>Benchmarking and evaluation [<a href="https://osu-nlp-group.github.io/Mind2Web/">Mind2Web</a>, <a href="https://osu-nlp-group.github.io/Mind2Web-2/">Mind2Web 2</a>, <a href="https://osu-nlp-group.github.io/TravelPlanner/">TravelPlanner</a>]</li>
+          <li>AI for sciences [<a href="https://imageomics.github.io/bioclip/">BioCLIP</a>, <a href="https://imageomics.github.io/bioclip-2/">BioCLIP 2</a>, <a href="https://osu-nlp-group.github.io/ScienceAgentBench/">ScienceAgentBench</a>]</li>
         </ul>
     
 	<div>
