--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <!-- <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li> -->
-            <li>05/2025: Happy to be promoted to Associate Professor with tenure and endowed with Innovation Scholar!</li>
+            <li>08/2025: Honored to receive the NSF CAREER Award!</li>
+			<li>05/2025: Happy to be promoted to Associate Professor with tenure and endowed with Innovation Scholar!</li>
             <li>05/2025: <a href="https://arxiv.org/abs/2502.14802">HippoRAG 2</a> accepted to ICML'25!</li>
             <li>02/2025: Honored to receive the <a href="https://sloan.org/fellowships/2025-Fellows">Sloan Research Fellowship</a>!</li>
             <li>02/2025: 3 papers accepted to CVPR'25: <a href="https://arxiv.org/abs/2411.16537">RoboSpatial</a> (<b>Oral</b>), <a href="https://arxiv.org/abs/2501.11309">Finer-CAM</a>, <a href="https://arxiv.org/abs/2501.09333">Prompt-CAM</a></li>
@@ -240,6 +241,7 @@
             <h2>Awards & Honors</h2>
             <div class="divider"></div>
             <ul>
+				<li>NSF CAREER Award, 2025</li> 
                 <li>Alfred P. Sloan Research Fellowship, 2025</li> 
                 <li>Lumley Interdisciplinary Research Award, OSU, 2025</li> 
                 <li>Faculty Teaching Award, OSU, 2025</li> 
