--- a/index.html
+++ b/index.html
@@ -910,10 +910,10 @@
         <div class="divider"></div>
         <ul>
         	<li>We are grateful for NSF (awards 
+			<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2443149&HistoricalAwards=false">2443149</a>, 
             <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2118240&HistoricalAwards=false">2118240</a>, 
-            <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2112606&HistoricalAwards=false">2112606</a>,
-            <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2137806&HistoricalAwards=false">2137806</a>),
-            ARL, NIH, NAIRR, Amazon, Orby AI, Walmart, Cisco, Fujitsu, and OSU TDAI for supporting our research.
+            <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2112606&HistoricalAwards=false">2112606</a>),
+            ARL, NIH, NAIRR, Open Philanthropy, Schmidt Sciences, Alfred P. Sloan Foundation, Amazon, Apple, Orby AI, Cisco, Intuit, Walmart, Fujitsu, and OSU TDAI for supporting our research.
           </li>
         </ul>
     </div>
