--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <!-- <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li> -->
             <li>09/2025: New blog post: <a href="https://yusu.substack.com/p/computer-use-modern-moravecs-paradox">Computer Use: Modern Moravec's Paradox</a></li>
+			<li>09/2025: 3 papers accepted to NeurIPS'25: <a href="https://imageomics.github.io/bioclip-2/">BioCLIP 2</a> (<b>Spotlight</b>), <a href="https://team-arm.github.io/arm/">Adaptive Reasoning Model</a> (<b>Spotlight</b>), <a href="https://osu-nlp-group.github.io/Mind2Web-2/">Mind2Web 2</a>.
 			<li>08/2025: Honored to receive the NSF CAREER Award!</li>
 			<li>05/2025: Happy to be promoted to Associate Professor with tenure and endowed with Innovation Scholar!</li>
             <li>05/2025: <a href="https://arxiv.org/abs/2502.14802">HippoRAG 2</a> accepted to ICML'25!</li>
