--- a/index.html
+++ b/index.html
@@ -268,20 +268,24 @@
         <div class="divider"></div>
         <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Current Ph.D. / Postdocs</b></p>
         <ul>
-            <li><a href="https://scholar.google.com/citations?user=c5RwjjcAAAAJ">Yu Gu</a> (SP20 &#8211)</li>
-            <li><a href="https://bernaljg.github.io/">Bernal Jiménez Gutiérrez</a> (SP20 &#8211)</li>
             <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (SP20 &#8211)</li>
             <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (AU20 &#8211)</li>
             <li><a href="https://chensj98.github.io/">Shijie Chen</a> (AU21 &#8211, co-advised with Huan Sun)</li>
             <li><a href="https://samuelstevens.me/">Sam Stevens</a> (AU21 &#8211)</li>
-            <li><a href="https://drogozhang.github.io/">Kai Zhang</a> (AU22 &#8211)</li>
             <li><a href="https://scholar.google.com/citations?user=0wfNprQAAAAJ&hl=en">Jiaman (Lisa) Wu</a> (AU22 &#8211, co-advised with Wei-Lun Chao)</li>
             <li><a href="https://boyuanzheng010.github.io/">Boyuan Zheng</a> (AU23 &#8211)</li>
             <li><a href="https://yihengshu.github.io/">Yiheng Shu</a> (AU23 &#8211)</li>
-            <li><a href="https://boyugou.github.io/">Boyu Gou</a> (AU23 &#8211)</li>
             <li><a href="https://tzmhuang.github.io/">Zanming Huang</a> (AU24 &#8211)</li>
             <li><a href="https://vimar-gu.github.io/">Jianyang Gu</a> (AU24 &#8211, postdoc with Wei-Lun Chao, Tanya Berger-Wolf)</li>
+			<li><a href="https://hsaest.github.io/">Jian Xie</a> (AU25 &#8211)</li>
+			<li><a href="https://zhehaozhang123.github.io/">Zhehao Zhang</a> (AU25 &#8211)</li>
         </ul>
+
+		<p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alumni</b></p>
+		<ul>
+			<li><a href="https://entslscheia.github.io/">Yu Gu</a> (Ph.D. 2025, Co-Founder at a stealth startup)</li>
+			<li><a href="https://bernaljg.github.io/">Bernal Jiménez Gutiérrez</a> (Ph.D. 2025, postdoc at JHU)</li>
+		</ul>
     </div>
         <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alumni</b></p>
         <ul>
