--- a/index.html
+++ b/index.html
@@ -313,8 +313,14 @@
 
         <div class="publication">
 	      <div style="margin-bottom: 10px;font-size: 18px">Selected recent highlights that reflect my current interests. See <a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a> for full list. *: Equal Contribution</div>	
-        <ul>
+        <ul>			
           <li>
+            <span class="paperTitle">Agent Learning via Early Experience
+            </span> <br />
+            <span class="paperAuthor">Kai Zhang, Xiangchao Chen, Bo Liu, Tianci Xue, Zeyi Liao, Zhihan Liu, Xiyao Wang, Yuting Ning, Zhaorun Chen, Xiaohan Fu, Jian Xie, Yuxuan Sun, Boyu Gou, Qi Qi, Zihang Meng, Jianwei Yang, Ning Zhang, Xian Li, Ashish Shah, Dat Huynh, Hengduo Li, Zi Yang, Sara Cao, Lawrence Jang, Shuyan Zhou, Jiacheng Zhu, Huan Sun, Jason Weston, Yu Su, Yifan Wu. </span>
+            <span class="paperResource"> [<a href="https://arxiv.org/abs/2510.08558">paper</a>] </span>
+          </li>
+		  <li>
             <span class="paperTitle">Mind2Web 2: Evaluating Agentic Search with Agent-as-a-Judge
             </span> <br />
             <span class="paperAuthor">Boyu Gou*, Zanming Huang*, Yuting Ning*, Yu Gu, Michael Lin, Weijian Qi, Andrei Kopanev, Botao Yu, Bernal Jiménez Gutiérrez, Yiheng Shu, Chan Hee Song, Jiaman Wu, Shijie Chen, Hanane Nour Moussa, Tianshu Zhang, Jian Xie, Yifei Li, Tianci Xue, Zeyi Liao, Kai Zhang, Boyuan Zheng, Zhaowei Cai, Viktor Rozgic, Morteza Ziyadi, Huan Sun, Yu Su. In the Conference on Neural Information Processing Systems, 2025 (<b>NeurIPS'25 D&B</b>)</span>
